tf_lb_test/load_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
  annotations:
    # Параметры проверки состояния узлов
    yandex.cloud/load-balancer-healthcheck-healthy-threshold: "2"
    yandex.cloud/load-balancer-healthcheck-interval: "2s"
spec:
  type: LoadBalancer
  ports:
  - port: 3003
    name: plaintext

    targetPort: 3003
  selector:
    app: django-app # App name
  loadBalancerIP: 158.160.49.15
  externalTrafficPolicy: Cluster
